refactor: migrate to Yarn 2

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,12 @@ node_modules
 dist
 
 apify_storage
+
+# https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
