--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,6 @@
 {
-    "extends": "@apify/eslint-config-ts"
+    "extends": [
+        "@apify/eslint-config-ts",
+        "plugin:prettier/recommended"
+    ]
 }
