--- a/package.json
+++ b/package.json
@@ -1,29 +1,35 @@
 {
-	"name": "schweb-crawler-next",
-	"version": "0.0.1",
-	"description": "This is an example of an Apify actor.",
-	"dependencies": {
-		"apify": "^2.0.7"
-	},
-	"devDependencies": {
-		"@apify/eslint-config-ts": "^0.1.4",
-		"@apify/tsconfig": "^0.1.0",
-		"@typescript-eslint/eslint-plugin": "^4.29.1",
-		"@typescript-eslint/parser": "^4.29.1",
-		"eslint": "^7.0.0",
-		"ts-node": "^10.3.0",
-		"typescript": "^4.4.4"
-	},
-	"scripts": {
-		"start": "npm run start:dev",
-		"start:prod": "node dist/main.js",
-		"start:dev": "ts-node -T src/main.ts",
-		"build": "tsc",
-		"lint": "eslint ./src --ext .js,.ts",
-		"lint:fix": "eslint ./src --ext .js,.ts --fix",
-		"test": "echo \"Error: oops, the actor has no tests yet, sad!\" && exit 1"
-	},
-	"author": "It's not you it's me",
-	"license": "ISC",
-	"packageManager": "yarn@3.1.1"
+    "name": "schweb-crawler-next",
+    "version": "0.0.1",
+    "description": "This is an example of an Apify actor.",
+    "dependencies": {
+        "apify": "^2.0.7",
+        "tslib": "^2.3.1"
+    },
+    "devDependencies": {
+        "@apify/eslint-config-ts": "^0.1.4",
+        "@apify/tsconfig": "^0.1.0",
+        "@typescript-eslint/eslint-plugin": "^4.29.1",
+        "@typescript-eslint/parser": "^4.29.1",
+        "eslint": "^7.0.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-import-resolver-node": "^0.3.6",
+        "eslint-plugin-import": "latest",
+        "eslint-plugin-prettier": "^4.0.0",
+        "prettier": "2.5.1",
+        "ts-node": "^10.3.0",
+        "typescript": "^4.4.4"
+    },
+    "scripts": {
+        "start": "yarn start:dev",
+        "start:prod": "node dist/main.js",
+        "start:dev": "ts-node -T src/main.ts",
+        "build": "tsc",
+        "lint": "eslint ./src --ext .js,.ts",
+        "lint:fix": "eslint ./src --ext .js,.ts --fix",
+        "test": "echo \"Error: oops, the actor has no tests yet, sad!\" && exit 1"
+    },
+    "author": "It's not you it's me",
+    "license": "ISC",
+    "packageManager": "yarn@3.1.1"
 }
