--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
     "description": "This is an example of an Apify actor.",
     "dependencies": {
         "apify": "^2.0.7",
+        "cheerio": "^1.0.0-rc.10",
         "tslib": "^2.3.1"
     },
     "devDependencies": {
         "@apify/eslint-config-ts": "^0.1.4",
         "@apify/tsconfig": "^0.1.0",
+        "@types/cheerio": "^0.22.30",
         "@typescript-eslint/eslint-plugin": "^4.29.1",
         "@typescript-eslint/parser": "^4.29.1",
         "eslint": "^7.0.0",
