--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
     "dependencies": {
         "apify": "^2.0.7",
         "cheerio": "^1.0.0-rc.10",
+        "sanitize-html": "^2.6.1",
         "tslib": "^2.3.1"
     },
     "devDependencies": {
         "@apify/eslint-config-ts": "^0.1.4",
         "@apify/tsconfig": "^0.1.0",
         "@types/cheerio": "^0.22.30",
+        "@types/node": "^17.0.13",
+        "@types/sanitize-html": "^2.6.2",
         "@typescript-eslint/eslint-plugin": "^4.29.1",
         "@typescript-eslint/parser": "^4.29.1",
         "eslint": "^7.0.0",
