--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.1",
     "description": "This is an example of an Apify actor.",
     "dependencies": {
+        "@minify-html/js": "^0.8.0",
         "apify": "^2.0.7",
         "cheerio": "^1.0.0-rc.10",
         "sanitize-html": "^2.6.1",
