--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@types/uuid": "^8.3.4",
         "apify": "^2.0.7",
         "cheerio": "^1.0.0-rc.10",
+        "recursive-copy": "^2.0.13",
         "sanitize-html": "^2.6.1",
         "tslib": "^2.3.1",
         "uuid": "^8.3.2"
