--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
     "extends": "@apify/tsconfig",
     "compilerOptions": {
+        "strict": true,
+        "alwaysStrict": true,
         "skipLibCheck": true,
         "esModuleInterop": true,
         "outDir": "dist",
