fix(ci/publish): confine to trigger only when "master" is pushed

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,6 +2,8 @@ name: Fetch and publish announcements
 
 on:
     push:
+        branches:
+            - master
     schedule:
         # https://crontab.guru
         - cron: "34 */4 * * 1-5"
