--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@minify-html/js": "^0.8.0",
         "@types/uuid": "^8.3.4",
+        "ajv": "^8.9.0",
         "apify": "^2.0.7",
         "cheerio": "^1.0.0-rc.10",
         "recursive-copy": "^2.0.13",
@@ -27,6 +28,7 @@
         "eslint-plugin-import": "latest",
         "eslint-plugin-prettier": "^4.0.0",
         "prettier": "2.5.1",
+        "ts-json-schema-generator": "^0.97.0",
         "ts-node": "^10.3.0",
         "typescript": "^4.4.4"
     },
@@ -37,7 +39,8 @@
         "build": "tsc && cp -r ./src/exporter ./dist/exporter",
         "lint": "eslint ./src --ext .js,.ts",
         "lint:fix": "eslint ./src --ext .js,.ts --fix",
-        "test": "echo \"Error: oops, the actor has no tests yet, sad!\" && exit 1"
+        "test": "echo \"Error: oops, the actor has no tests yet, sad!\" && exit 1",
+        "build:schema": "ts-node -T src/scripts/build-schema.ts"
     },
     "author": "It's not you it's me",
     "license": "ISC",
