--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "ajv": "^8.9.0",
         "apify": "^2.0.7",
         "cheerio": "^1.0.0-rc.10",
+        "flatstr": "^1.0.12",
         "recursive-copy": "^2.0.13",
         "sanitize-html": "^2.6.1",
         "tslib": "^2.3.1",
