--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "prettier": "2.5.1",
         "ts-json-schema-generator": "^0.97.0",
         "ts-node": "^10.3.0",
-        "typescript": "^4.4.4"
+        "typescript": "^4.4.4",
+        "yaml": "^1.10.2"
     },
     "scripts": {
         "start": "yarn start:dev",
@@ -41,7 +42,7 @@
         "lint": "eslint ./src --ext .js,.ts",
         "lint:fix": "eslint ./src --ext .js,.ts --fix",
         "test": "echo \"Error: oops, the actor has no tests yet, sad!\" && exit 1",
-        "build:schema": "ts-node -T src/scripts/build-schema.ts"
+        "build:schema": "ts-node -T src/scripts/build-schema-json.ts"
     },
     "author": "It's not you it's me",
     "license": "ISC",
