--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "schweb-crawler-next",
-    "version": "0.0.1",
-    "description": "This is an example of an Apify actor.",
+    "version": "1.0.0",
+    "description": "這是爬取 SMHS 目前最新公告的爬蟲。",
     "dependencies": {
         "@minify-html/js": "^0.8.0",
         "@types/uuid": "^8.3.4",
@@ -38,13 +38,13 @@
         "start": "yarn start:dev",
         "start:prod": "node dist/main.js",
         "start:dev": "ts-node -T src/main.ts",
-        "build": "tsc && cp -r ./src/exporter ./dist/exporter",
+        "build": "tsc && cp -r ./src/exporter/data ./dist/exporter",
         "lint": "eslint ./src --ext .js,.ts",
         "lint:fix": "eslint ./src --ext .js,.ts --fix",
         "test": "echo \"Error: oops, the actor has no tests yet, sad!\" && exit 1",
         "build:schema": "ts-node -T src/scripts/build-schema-json.ts"
     },
-    "author": "It's not you it's me",
-    "license": "ISC",
+    "author": "pan93412 <pan93412@gmail.com>",
+    "license": "GPL-3.0",
     "packageManager": "yarn@3.1.1"
 }
