--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "這是爬取 SMHS 目前最新公告的爬蟲。",
     "dependencies": {
         "@minify-html/js": "^0.8.0",
+        "@types/turndown": "^5.0.1",
         "@types/uuid": "^8.3.4",
         "ajv": "^8.9.0",
         "apify": "^2.0.7",
@@ -12,6 +13,7 @@
         "recursive-copy": "^2.0.13",
         "sanitize-html": "^2.6.1",
         "tslib": "^2.3.1",
+        "turndown": "^7.1.1",
         "typed-emitter": "^2.1.0",
         "uuid": "^8.3.2"
     },
