--- a/package.json
+++ b/package.json
@@ -6,34 +6,34 @@
         "@minify-html/js": "^0.8.0",
         "@types/turndown": "^5.0.1",
         "@types/uuid": "^8.3.4",
-        "ajv": "^8.9.0",
-        "apify": "^2.0.7",
+        "ajv": "^8.10.0",
+        "apify": "^2.2.2",
         "cheerio": "^1.0.0-rc.10",
         "flatstr": "^1.0.12",
-        "recursive-copy": "^2.0.13",
-        "sanitize-html": "^2.6.1",
+        "recursive-copy": "^2.0.14",
+        "sanitize-html": "^2.7.0",
         "tslib": "^2.3.1",
         "turndown": "^7.1.1",
         "typed-emitter": "^2.1.0",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
-        "@apify/eslint-config-ts": "^0.1.4",
+        "@apify/eslint-config-ts": "^0.2.3",
         "@apify/tsconfig": "^0.1.0",
-        "@types/cheerio": "^0.22.30",
-        "@types/node": "^17.0.13",
+        "@types/cheerio": "^0.22.31",
+        "@types/node": "^17.0.19",
         "@types/sanitize-html": "^2.6.2",
-        "@typescript-eslint/eslint-plugin": "^4.29.1",
-        "@typescript-eslint/parser": "^4.29.1",
-        "eslint": "^7.0.0",
-        "eslint-config-prettier": "^8.3.0",
+        "@typescript-eslint/eslint-plugin": "^5.12.1",
+        "@typescript-eslint/parser": "^5.12.1",
+        "eslint": "^8.9.0",
+        "eslint-config-prettier": "^8.4.0",
         "eslint-import-resolver-node": "^0.3.6",
-        "eslint-plugin-import": "latest",
+        "eslint-plugin-import": "^2.25.4",
         "eslint-plugin-prettier": "^4.0.0",
         "prettier": "2.5.1",
-        "ts-json-schema-generator": "^0.97.0",
-        "ts-node": "^10.3.0",
-        "typescript": "^4.4.4",
+        "ts-json-schema-generator": "^0.98.0",
+        "ts-node": "^10.5.0",
+        "typescript": "^4.5.5",
         "yaml": "^1.10.2"
     },
     "scripts": {
