--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@types/sanitize-html": "^2.6.2",
         "@typescript-eslint/eslint-plugin": "^5.12.1",
         "@typescript-eslint/parser": "^5.12.1",
+        "domhandler": "^4.3.0",
         "eslint": "^8.9.0",
         "eslint-config-prettier": "^8.4.0",
         "eslint-import-resolver-node": "^0.3.6",
