--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "這是爬取 SMHS 目前最新公告的爬蟲。",
     "dependencies": {
         "@minify-html/js": "^0.8.0",
-        "ajv": "^8.10.0",
-        "apify": "^2.2.2",
+        "ajv": "^8.11.0",
+        "apify": "^2.3.0",
         "cheerio": "^1.0.0-rc.10",
         "flatstr": "^1.0.12",
         "recursive-copy": "^2.0.14",
@@ -19,23 +19,23 @@
         "@apify/eslint-config-ts": "^0.2.3",
         "@apify/tsconfig": "^0.1.0",
         "@types/cheerio": "^0.22.31",
-        "@types/node": "^17.0.19",
+        "@types/node": "^17.0.23",
         "@types/sanitize-html": "^2.6.2",
         "@types/turndown": "^5.0.1",
         "@types/uuid": "^8.3.4",
-        "@typescript-eslint/eslint-plugin": "^5.12.1",
-        "@typescript-eslint/parser": "^5.12.1",
-        "domhandler": "^4.3.0",
-        "eslint": "^8.9.0",
-        "eslint-config-prettier": "^8.4.0",
+        "@typescript-eslint/eslint-plugin": "^5.18.0",
+        "@typescript-eslint/parser": "^5.18.0",
+        "domhandler": "4.3.0",
+        "eslint": "^8.13.0",
+        "eslint-config-prettier": "^8.5.0",
         "eslint-import-resolver-node": "^0.3.6",
-        "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-prettier": "^4.0.0",
-        "prettier": "2.5.1",
-        "ts-json-schema-generator": "^0.98.0",
-        "ts-node": "^10.5.0",
-        "typescript": "^4.5.5",
-        "yaml": "^1.10.2"
+        "prettier": "2.6.2",
+        "ts-json-schema-generator": "^1.0.0",
+        "ts-node": "^10.7.0",
+        "typescript": "4.5",
+        "yaml": "^2.0.0"
     },
     "scripts": {
         "start": "yarn start:dev",
