--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.18.0",
         "@typescript-eslint/parser": "^5.18.0",
-        "domhandler": "4.3.0",
+        "domhandler": "~4.3.0",
         "eslint": "^8.13.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-import-resolver-node": "^0.3.6",
@@ -34,11 +34,11 @@
         "prettier": "2.6.2",
         "ts-json-schema-generator": "^1.0.0",
         "ts-node": "^10.7.0",
-        "typescript": "4.5",
+        "typescript": "~4.6.3",
         "yaml": "^2.0.0"
     },
     "scripts": {
-        "start": "yarn start:dev",
+        "start": "pnpm start:dev",
         "start:prod": "node dist/main.js",
         "start:dev": "ts-node -T src/main.ts",
         "build": "tsc && cp -r ./src/exporter/data ./dist/exporter",
@@ -49,5 +49,5 @@
     },
     "author": "pan93412 <pan93412@gmail.com>",
     "license": "GPL-3.0",
-    "packageManager": "yarn@3.1.1"
+    "packageManager": "pnpm@6.32.6"
 }
