--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "schweb-crawler-next",
-    "version": "1.1.0",
+    "version": "2.0.0",
     "description": "這是爬取 SMHS 目前最新公告的爬蟲。",
     "dependencies": {
         "@minify-html/js": "^0.8.0",
@@ -25,7 +25,7 @@
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.18.0",
         "@typescript-eslint/parser": "^5.18.0",
-        "domhandler": "~4.3.0",
+        "domhandler": "4.3.0",
         "eslint": "^8.13.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-import-resolver-node": "^0.3.6",
@@ -34,7 +34,7 @@
         "prettier": "2.6.2",
         "ts-json-schema-generator": "^1.0.0",
         "ts-node": "^10.7.0",
-        "typescript": "~4.6.3",
+        "typescript": "^4.6.3",
         "yaml": "^2.0.0"
     },
     "scripts": {
