--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "@minify-html/js": "^0.8.0",
         "ajv": "^8.11.0",
         "apify": "^2.3.2",
-        "cheerio": "^1.0.0-rc.10",
+        "cheerio": "=1.0.0-rc.10",
         "flatstr": "^1.0.12",
         "recursive-copy": "^2.0.14",
         "sanitize-html": "^2.7.0",
@@ -19,23 +19,23 @@
         "@apify/eslint-config-ts": "^0.2.3",
         "@apify/tsconfig": "^0.1.0",
         "@types/cheerio": "^0.22.31",
-        "@types/node": "^17.0.31",
+        "@types/node": "^17.0.35",
         "@types/sanitize-html": "^2.6.2",
         "@types/turndown": "^5.0.1",
         "@types/uuid": "^8.3.4",
-        "@typescript-eslint/eslint-plugin": "^5.23.0",
-        "@typescript-eslint/parser": "^5.23.0",
-        "domhandler": "4.3.0",
-        "eslint": "^8.15.0",
+        "@typescript-eslint/eslint-plugin": "^5.25.0",
+        "@typescript-eslint/parser": "^5.25.0",
+        "domhandler": "^4.3.1",
+        "eslint": "^8.16.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-import-resolver-node": "^0.3.6",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-prettier": "^4.0.0",
-        "prettier": "2.6.2",
+        "prettier": "^2.6.2",
         "ts-json-schema-generator": "^1.0.0",
-        "ts-node": "^10.7.0",
+        "ts-node": "^10.8.0",
         "typescript": "^4.6.4",
-        "yaml": "^2.0.1"
+        "yaml": "^2.1.0"
     },
     "scripts": {
         "start": "pnpm start:dev",
