--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "schema"]
 	path = schema
-	url = git@github.com:smhs-os-project/schweb-crawler-jtd.git
+	url = https://github.com/smhs-os-project/schweb-crawler-jtd.git
