--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,7 +49,7 @@ jobs:
             - name: Pushes to another repository
               uses: cpina/github-action-push-to-another-repository@main
               env:
-                  API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
+                  SSH_DEPLOY_KEY: ${{ secrets.SSH_DEPLOY_KEY }}
               with:
                   source-directory: data
                   destination-github-username: smhs-os-project
